add viewbinding and databinding in gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     namespace 'com.example.submissionandroidintermediate'
     compileSdk 33
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "com.example.submissionandroidintermediate"
