too lazy to make message for version control, so i'll just merge it all

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -18,9 +20,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SubmissionAndroidIntermediate"
         tools:targetApi="31">
-
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".userinterface.HomePageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".userinterface.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
@@ -29,12 +36,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".userinterface.RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".userinterface.MainActivity"
             android:exported="true" />
     </application>
 
