--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
 
 android {
@@ -43,16 +44,17 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
 
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     implementation 'androidx.room:room-paging:2.5.1'
 
     implementation 'androidx.room:room-runtime:2.5.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     kapt 'androidx.room:room-compiler:2.5.1'
     implementation 'androidx.room:room-ktx:2.5.1'
 
     implementation 'com.github.bumptech.glide:glide:4.15.0'
+    implementation 'id.zelory:compressor:3.0.1'
 
     // api
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
