--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,37 +32,6 @@
         android:theme="@style/Theme.SubmissionAndroidIntermediate"
         tools:targetApi="31">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
-        <!--        <meta-data-->
-        <!--            android:name="com.google.android.geo.API_KEY"-->
-        <!--            android:value="YOUR_API_KEY" />-->
-
-        <!--        <activity-->
-        <!--            android:name=".userinterface.PickLocationActivity2"-->
-        <!--            android:exported="false"-->
-        <!--            android:label="@string/title_activity_pick_location2" />-->
-        <!--        &lt;!&ndash;-->
-        <!--             TODO: Before you run your application, you need a Google Maps API key.-->
-
-        <!--             To get one, follow the directions here:-->
-
-        <!--                https://developers.google.com/maps/documentation/android-sdk/get-api-key-->
-
-        <!--             Once you have your API key (it starts with "AIza"), define a new property in your-->
-        <!--             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the-->
-        <!--             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".-->
-        <!--        &ndash;&gt;-->
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="${googleMapsApiKey}" />
@@ -114,6 +83,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
